tests/integration/security/test_artifacts/security-ae75b8a2494145f8974590/TestMutualTlsOrigination/credential_with_CRL_having_unused_revoked_server_certificate/_test_context/DestinationRule.1118545719.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-mtls-credential-dummy-crl
spec:
  host: "external.external-4-11206.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          credentialName: mtls-credential-dummy-crl
          sni: external.external-4-11206.svc.cluster.local
